# spellbook-engine

./: .coverage  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
__architecture/baseline/: 00_project_setup.md  02_theme_system.md
__architecture/styles/: 01_style_system_overview.md  02_custom_styles_guide.md  03_theming_future.md
spellbook_engine/: __init__.py  base_block.py  exceptions.py  parser.py  registry.py  styles.py  theme.py
spellbook_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
spellbook_engine/builtins/logic/: alert.py  card.py  quote.py  render_error.py
spellbook_engine/builtins/templates/: alert.html  card.html  quote.html  render_error.html
tests/: conftest.py
tests/_dummy_files/: basic_markdown.md  code_heavy.md  edge_cases.md  spellblocks_only.md
tests/_golden_files/: basic_markdown.html  code_heavy.html  edge_cases.html  spellblocks_only.html
tests/integration/: __init__.py  conftest.py  test_parser_integration.py
tests/unit/: __init__.py  conftest.py  test_base_block.py  test_builtin_blocks.py  test_exceptions.py  test_registry_discovery.py  test_styles.py  test_theme.py
